--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <a class="menu"href="">Home</a>
         <a class="menu"href="">Sobre</a>
-        <a class="menu"href="">Abilidades</a>
+        <a class="menu"href="">Habilidades</a>
         <a class="menu"href="">Trabalhos</a>
         <a class="menu"href="">contatos</a>
       </nav>
