--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a class="menu"href="">Sobre</a>
         <a class="menu"href="">Habilidades</a>
         <a class="menu"href="">Trabalhos</a>
-        <a class="menu"href="">contatos</a>
+        <a class="menu"href="">Contatos</a>
       </nav>
     </header>
     <body>        
