--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <body>        
       <section class="texto" >
-          <p class="texto-principal">Oi <br>eu sou<span style="color:darkcyan;"> Pedro H</span><br>Programador</p>
+          <p class="texto-principal">Oi <br>eu sou<span style="color:darkcyan;"> Pedro </span><br>Programador</p>
             <img class="imagem-principal" src="img/Sem Título-2.png" alt="imagem-Pedro-Henrique-A ">
               
       </section>
