--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div>
     <header class="cabecalho">
-      <p style="color: aliceblue">Pedro H</p>
+      <p style="color: aliceblue ;font-size: 10px;">Pedro H</p>
       <nav>
         <a class="menu"href="">Home</a>
         <a class="menu"href="">Sobre</a>
