--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div>
     <header class="cabecalho">
-      <p style="color: aliceblue ;font-size: 25px;">Pedro H</p>
+      <p style="color: aliceblue ;font-size: 25px;">Pedro Henrique</p>
       <nav>
         <a class="menu"href="">Home</a>
         <a class="menu"href="">Sobre</a>
@@ -25,7 +25,7 @@
       <section class="texto" >
           <p class="texto-principal">Oi <br>eu sou<span style="color:darkcyan;"> Pedro </span><br>Programador</p>
             <img class="imagem-principal" src="img/Sem Título-2.png" alt="imagem-Pedro-Henrique-A ">
-              
+             <div class="gradient-imagem"></div>
       </section>
       <a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: aliceblue;"> 
         <button class="butao" >
@@ -34,9 +34,4 @@
       </a>
     </div>
     </body>
-    <footer class="footer">
-      <a href=""> <img class="img-footer" src="img/linkeding.png" alt="linkedin"></a>
-      <a href=""><img class="img-footer" src="img/insta.png" alt="instagram"></a>
-      <a href=""><img class="img-footer" src="img/face.png" alt="github"></a>
-    </footer>
 </html>
